# One-Class-Classification-Anomaly-Detection

./: .gitignore  LICENSE.txt  README.md  eval.py  main.py  pyproject.toml  requirements.txt
notebooks/: MVTecAD.ipynb  data_augmentation.ipynb
src/: eval.py  test.py  train.py  utils.py
src/datasets/: anomaly_dataset.py
src/models/: dfr.py  feat_cae.py  feature.py  non_local.py  vgg.py  vgg19.py
