[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "One-Class-Classification-Anomaly-Detection"
version = "0.1.0"
authors = [{ name = "Magazzù Gaetano", email = "gaetanomagazzu3@gmail.com" }]
description = "One-Class-Classification-Anomaly-Detection"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Pytorch", "Deep Learning", "CNN", "Anomaly Detection"]

[project.urls]
Repository = "https://github.com/MagazzuGaetano/One-Class-Classification-Anomaly-Detection"

[tool.ruff]
show-fixes = true
fix = true
src = ["src"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
combine-as-imports = true
known-first-party = ["src"]
